# logic

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: LogikInc.cmake
src/exe/: CMakeLists.txt
src/exe/skeleton/: CMakeLists.txt  main.cpp  triangle.vert
src/lib/: CMakeLists.txt
src/lib/logik/: CMakeLists.txt  logik.h
src/lib/logik/core/: Instance.cpp  Instance.h
src/lib/logik/window/: Window.cpp  Window.h
